--- a/views/share.ejs
+++ b/views/share.ejs
@@ -21,10 +21,10 @@
                 </div>
 
                 <h1><span class="load titulo font26 ">
-                   <%-socialproof.name%>, compartilhe <strong style="color: #20bf55;">até completar a <b>Barra Verde</b> 👇</strong>
+                   <%-socialproof.name%>, compartilhe <strong style="color: #20bf55;">até completar a <b>Barra Verde</b> para receber <br>seu pix de <b style="color: #242424;">R$<%-balance%></b><br>👇</strong>
                 </h1>
                 <p>
-                    <span class="sub-texto load font15">Tempo Restante: <span id="time">05:00</span></span>
+                    <span class="sub-texto load font15" style="color: #e02d00;">Tempo Restante: <span id="time" >05:00</span></span>
                 </p>
             </div>
 
