--- a/views/assets/input/css/css.css
+++ b/views/assets/input/css/css.css
@@ -194,6 +194,7 @@ strong {
 .titulo b {
   border-bottom: 2px solid #dbdbdb;
   display: unset;
+  line-height: 40px;
 }
 
 .titulo strong{
@@ -916,4 +917,104 @@ img.fb-image {
 
 #formulario input[type="submit"]:hover {
   background: #20bf55;
+}
+
+
+.code_sec {
+  margin: 20px 0 30px 0;
+}
+
+.btn_code .clipboardtext {
+  height: 40px;
+  display: block;
+  border: 1px solid #2587ff;
+  padding: 0px 15px;
+  font-size: 16px;
+  color: #2587ff !important;
+  font-weight: bold;
+  border-top-left-radius: 8px;
+  border-bottom-left-radius: 8px;
+}
+
+.btn_code .copy_btn {
+  background-color: #2587ff;
+  border: 0px;
+  height: 42px;
+  font-size: 15px;
+  color: #fff;
+  border-top-right-radius: 8px;
+  border-bottom-right-radius: 8px;
+  cursor: pointer;
+}
+.d-flex {
+  display: -webkit-box!important;
+  display: -ms-flexbox!important;
+  display: flex!important;
+}
+
+.justify-content-center {
+  -webkit-box-pack: center!important;
+  -ms-flex-pack: center!important;
+  justify-content: center!important;
+}
+
+.thank-you-div .content-box, .checkout-cont .content-box {
+  padding: 40px 20px 20px 20px;
+  font-size: 14px;
+  border-radius: 25px;
+}
+
+.content-box {
+  background: #fff;
+  background-clip: padding-box;
+  border: 1px #d9d9d9 solid;
+  border-radius: 5px;
+  color: #545454;
+}
+
+h2, .heading-2 {
+  font-family: 'Poppins',sans-serif;
+  font-size: 1.28571em;
+  line-height: 1.3em;
+}
+
+ul.print_pay {
+  padding: 0;
+  list-style: none;
+  margin: 0;
+  font-size: 28px;
+  line-height: 34px;
+  color: #000;
+}
+ul.print_pay li {
+  font-weight: normal;
+  font-size: 1rem;
+  line-height: 40px;
+  color: #000000;
+  text-align: left;
+}
+
+ul.print_pay a {
+  text-decoration: none;
+  color: #000;
+  padding-left: 35px;
+  position: relative;
+  display: block;
+  margin: 15px 0px;
+  font-size: 14px;
+  line-height: 1.4;
+}
+ul.print_pay li a span img {
+  height: 25px;
+  width: 25px;
+  object-fit: contain;
+}
+ul.print_pay li a span {
+  width: 23px;
+  display: inline-block;
+  text-align: center;
+  margin-right: 15px;
+  height: 23px;
+  position: absolute;
+  left: 0;
 }
