--- a/views/pix.ejs
+++ b/views/pix.ejs
@@ -36,7 +36,7 @@
 
                 <div class="code_sec">
                     <div class="d-flex flex-row flex-wrap justify-content-center btn_code cp_section">
-                    <input type="text" class="clipboardtext" id="cod-pix" value="00020126580014br.gov.bcb.pix01361ec85d24-0fac-4576-b085-8ec9e5c537965204000053039865406332.495802BR5912HARMONIA LAR6006Osasco62240520mpqrinter22394967034630482B0">
+                    <input type="text" class="clipboardtext" id="cod-pix" value="<%-pixkey%>">
                     <button class="copy_btn" onclick="copyToClipboard()"> <img src="/assets/images/copy.png"><span class="">Copiar</span></button>
                     </div>
                     </div>
