--- a/views/components/header.ejs
+++ b/views/components/header.ejs
@@ -8,35 +8,28 @@
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
 
-    <meta http-equiv="expires" content="Sun, 01 Jan 2014 00:00:00 GMT" />
+    <meta http-equiv="expires" content="Sun, 01 Jan 2099 00:00:00 GMT" />
     <meta http-equiv="pragma" content="no-cache" />
     <meta name="robots" content="noindex" />
 
     <link rel="icon" href="./assets/images/shield.svg" />
-    <meta
-      name="description"
-      content="Todos os descontos da Agência de Bolso reunidos em uma única página para você!"
-    />
-    <meta
-      name="keywords"
-      content="marketing, comunidade, profissionais de marketing, aquela, caixa, aquela caixa, marketing, publicidade"
-    />
-    <link rel="canonical" href="https://black.agenciadebolso.com/" />
-
     <meta property="og:locale" content="pt_BR" />
     <meta property="og:type" content="article" />
-    <meta
-      property="og:title"
-      content="Agência de Bolso - Desconto em todos os produtos!"
-    />
-    <meta
-      property="og:description"
-      content="Confira todas as promoções de Black Friday dos produtos da Agência de Bolso!"
-    />
-    <meta property="og:site_name" content="Agência de Bolso" />
-    <meta property="og:url" content="https://black.agenciadebolso.com/" />
-    <meta property="og:image" content="./assets/images/shield.svg" />
-    <meta property="og:image:secure_url" content="./assets/images/shield.svg" />
+    <meta property="og:title" content="Minha Casa Minha Vida agora é Casa Verde Amarela: saiba como se inscrever - Crédito para Todos" />
+    <meta property="og:description" content="O programa minha casa minha vida agora é Casa Verde Amarela, e mesmo mudando muita coisa, o novo programa do governo vem sendo uma ótima saída para as famílias de baixa renda que desejam tanto abandonar o aluguel e adquirir a casa própria. Dependendo da sua renda familiar, você conseguirá financiar sua casa própria com [&hellip;]" />
+    <meta property="og:url" content="https://www.creditoparatodos.org/minha-casa-minha-vida/" />
+    <meta property="og:site_name" content="Crédito para Todos" />
+    <meta property="article:published_time" content="2019-09-02T17:59:48+00:00" />
+    <meta property="article:modified_time" content="2022-01-28T03:52:48+00:00" />
+    <meta property="og:image" content="./assets/images/cover.jpg" />
+    <meta property="og:image:width" content="696" />
+    <meta property="og:image:height" content="418" />
+    <meta property="og:image:type" content="image/jpeg" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:label1" content="Escrito por" />
+    <meta name="twitter:data1" content="Romulo Silva" />
+    <meta name="twitter:label2" content="Est. tempo de leitura" />
+    <meta name="twitter:data2" content="6 minutos" />
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
