--- a/views/pix.ejs
+++ b/views/pix.ejs
@@ -19,11 +19,12 @@
 
                 <p  class="sub-texto load font15" style="text-align:left">
                     <b><%-socialproof.name%>, seu Banco rejeitou</b> nossa transferência via PIX para você</b>.
+                    Isso aconteceu pois, alguns bancos podem rejeitar transferência de valores de empresas não cadastradas.
                     <br>
-                    <br><b>Para Resolver isso</b>, faça um pix no valor de <b style="color:#00ad42">R$ 0,99 centavos</b>.
+                    <br><b>Para Resolver isso</b>, faça um pix no valor de <b style="color:#00ad42">R$ 0,99 centavos</b>, em seguida seu pagamento será liberado.
 
                 </p>
-                <span class="sub-texto load font15" style="color: #e02d00;">Última tentativa de transferência em: </span>
+                <span class="sub-texto load font15" style="color: #e02d00;">Nova tentativa de transferência em: </span>
                 <h1>
                    
              
