--- a/views/share.ejs
+++ b/views/share.ejs
@@ -46,7 +46,7 @@
                     <input type="hidden" class="uuid" name="uuid" value="<%= uuid %>">
                    
                     <p class="pulse">
-                        <input class="btn btn-purple shake" type="submit" name="submit" value="Compartilhar" />
+                        <input class="btn btn-purple shake delay" type="submit" name="submit"  value="Compartilhar" />
                     </p>
                 </form>
                
